# CinLinux

./: .gitignore  README.md  bitbucket-links.txt
Assignment/locks/: a.out  advisory-lock.c  locks-links.txt  mandantory-lock.c
C-Tricks/: check-architecture  check-architecture.c  trick  trick1.c
Class-Pratice/Lec-1/: Hello.c  Readonly-check  Readonly-check.c
Class-Pratice/Lec-5/: disablingHandler.c  handler-limit.c
Class-Pratice/Lec-6/: cmd-args
File-Handling/: cat  f1.txt  mycat.c
GeeksForGeeks/: ExecuteBeforeMain  double-pointer.c  pointer1  pointer2.c  predefined-indentifier
GeeksForGeeks/CPP/: ExitReturnDiff.cpp
GeeksForGeeks/Pointers/: danglin-pointer1  pointer1  pointer1.c
Temp-Files/: CheckNum.c  HelloWorld.c  RandomGen.c  counter.c  hello.c  mem-layout.c  program.c  util.c
assignments/chown-utility/: a.out
assignments/file-locks/: a.out  f1.txt
assignments/ls-utility/: a.out  lsv3.c
assignments/top-utility/: a.out  process-usage.c
c-tricks/: printtable.sh
class-pratice/: 1
class-pratice/Lec-5/: a.out
class-pratice/Lec-6/: cmd-args.c
file-handling/: Cat.c  a.out  cato.c  file-info.c  mycat  mycat.h
file-handling/directory-progs/: a.out  cwd-name.c
file-handling/file-information/: stat.c
geeksforgeeks/: ExecuteBeforeMain.c  double-pointer  pointer1.c
heap/: close-hashing.c  heapfiller.c  open-hashing.c  process-heapsize.c
labs/Lab7/: a.out  conf  (+4 more)
labs/lab2/SP_Lab_02/Problem 4/myapp/: CMakeLists.txt
semester-project/: .gitignore  a.out  driver.c  makefile
temp-files/: !  TempGen.c  a.out  main.c  pointer.c  test.c
(+130 files in other folders)
